# ethereum-indexer

./: .env.example.txt  Cargo.toml  README.md  main.rs
indexer/: Cargo.toml  env.example.txt
indexer/src/: models.rs
src/: alchemy.rs  db.rs  main.rs  models.rs  utils.rs
verkle/: Cargo.toml  file.txt  verkle.rs
verkle/src/: main.rs
verkle_kzg_impl/: Cargo.toml
verkle_kzg_impl/src/: lib.rs  main.rs  verkle_tree.rs
verkle_kzg_impl/src/kzg/: commit.rs  mod.rs  open.rs  setup.rs  types.rs  verify.rs
verkle_kzg_impl/src/vector_commitment/: commit.rs  interpolate.rs  mod.rs  types.rs
