[package]
name = "RPCconnection"
version = "0.1.0"
edition = "2021"  

[dependencies]

reqwest = { version = "0.12", features = ["json"] }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


tokio = { version = "1", features = ["full"] }

dotenv = "0.15"

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

futures-util = "0.3"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
