[package]
name = "verkle_project"
version = "0.1.0"
edition = "2021"

[dependencies]
# Librerie Arkworks (consigliate per KZG)
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-poly = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"


# Altre utilità
bls12_381 = "0.8"
ff = "0.13"
group = "0.13"
pairing = "0.23"
rand = "0.8"
sha2 = "0.10"